fix: CraftRecipeAutoProcessor